--- a/index.html
+++ b/index.html
@@ -4,11 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerse Web</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div>
-        <h5>Tech-Shop</h5>
-    </div>
-    
+    <header> 
+        <div>
+            <h5>Tech-Shop</h5>
+        </div>
+
+        <nav>
+            <ul>
+                <li class="icon">
+                    <a href="" class="ficon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="icon">
+                    <a href="" class="sicon"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="icon">
+                    <a href="" class="ticon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <div class="hero-text">
+            <h4>boAt Airdopes 131</h4>
+            <h2>Featherweight For <br>Comfort All-Day.</h2>
+            <p class="price">₹1,099 <span>₹2,990</span></p>
+            <button>Shop Now</button>
+        </div>
+        <div class="boat-bg-img">
+            <img src="./products/boat131-3.png" alt="boAt Airdopes 131" width="300px" height="300px">
+        </div>
+    </section>
+    <section class="featured-products">
+        <h2>Featured Products</h2>
+        <div class="products">
+            <div class="product-card1">
+                <p>JBL Endurance Run Sports</p>
+                <img src="./products/jbl-endu-1.png" alt="">
+                <p><b>₹999</b><span>&nbsp;&nbsp;&nbsp;<s>₹1,599</s></span></p>
+            </div>
+            <div class="product-card2">
+                <p>boAt Airpodes 203</p>
+                <img src="./products/boat203-1.png" alt="">
+                <p><b>₹1,074</b><span>&nbsp;&nbsp;&nbsp;<s>₹3,999</s></span></p>
+            </div>
+            <div class="product-card3">
+                <p>boAt Rockerz 518</p>
+                <img src="./products/boat518-1.png" alt="">
+                <!-- <p class="price">₹1,299 <span>₹3,990</span></p> -->
+                <p><b>₹1,299</b><span>&nbsp;&nbsp;&nbsp;<s>₹3,990</s></span></p>
+            </div>
+            <div class="product-card4">
+                <p>JBL Tune 760NC</p>
+                <img src="./products/jbl760nc-1.png" alt="">
+                <p><b>₹5,999</b><span>&nbsp;&nbsp;&nbsp;<s>₹7,990</s></span></p>
+            </div>
+            <div class="product-card5">
+                <p>boAt Rockerz 255</p>
+                <img src="./products/boat255r-1.png" alt="">
+                <p><b>₹899</b><span>&nbsp;&nbsp;&nbsp;<s>₹2,990</s></span></p>
+            </div>
+         
+        </div>
+
+    </section>
+
 </body>
 </html>
