adding the cart page

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <li class="icon">
                     <a href="" class="ficon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                         </svg>
                     </a>
                 </li>
                 <li class="icon">
-                    <a href="" class="sicon"> 
+                    <a href="./cart.html" class="sicon"> 
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                         </svg>
@@ -540,21 +540,17 @@
         <!-- footer Bottom Start -->
         <div class="footer-bottom">
             <div class="footerdisc">
-                <p>&copy; 2024 Tech-Shop. All Rights Reserved. Built by Pradeep Singh</p>
+                <p>&copy; 2024 | All Rights Reserved. Built by | Pradeep Singh</p>
             </div>
             <div class="social-icons">
                 <div class="facebook">
                     <a href="" style="color: lightsteelblue;"> <i class="fa fa-facebook"  style="font-size:20px"></i></a>
-                   
-                    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/> 
                 </div>
                 <div class="twitter">
                     <a href="" style="color: lightsteelblue;"> <i class="fa fa-twitter"  style="font-size:20px"></i></a>                        
                 </div>
                 <div class="instagram">
-                    <a href="" style="color: lightsteelblue;"> <i class="fa fa-instagram"  style="font-size:20px"></i></a>
-                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                   
+                    <a href="" style="color: lightsteelblue;"> <i class="fa fa-instagram"  style="font-size:20px"></i></a>                   
                 </div>
                 <div class="linkedin">
                     <a href="" style="color: lightsteelblue;"><i class="fa fa-linkedin" style="font-size:20px"></i></a>
