update in cart page

--- a/cart.html
+++ b/cart.html
@@ -159,8 +159,28 @@
 
         </div>
         <div class="ordersummary">
-            <div>
-                <p>Order Summary ( 4 items )</p>
+            <div class="summary-heading">
+                <h3>Order Summary ( 4 items )</h3>
+            </div>
+            <div class="summary-details">
+                <div class="details-first">
+                    <p style="color:  lightsteelblue "><b> Original Price</b>  <span class="sporgprice" style="text-align: end;">₹22,978</span></p><br><br>
+                </div>
+                <div class="details-second">
+                    <p style="color: lightsteelblue"><b> Discount</b> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; <span class="spDisPrice" style="color: green;text-align: end;">-₹10,132</span></p><br><br>   
+                </div>
+                <div class="details-third">
+                    <p style="color:  lightsteelblue"><b> Delivery</b> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<span class="spDelivery" style="color: green;"> Free </span></p><br><br>   
+                </div>
+            </div>
+            <div class="hr-summary">
+                <hr width="80%" size="1">
+            </div>
+            <div class="totalprice">
+                <h4 style="color: lightsteelblue" font-size: 25px;>Total Price &nbsp;&nbsp;&nbsp;&nbsp;<span class="spTotalPrice" style="text-align: end;">₹12,846</span> </h4><br><br>
+            </div>
+            <div class="checkout-btn">
+                <button style="width: 270px;height: 40px;color: white; background-color: red;font-size: large;">Checkout</button>
             </div>
 
         </div>
