update in cart page and product detail page

--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,8 @@
     <!-- Header  start -->
     <header class="header">
         <div class="heading">
-            <h2>Tech-Shop</h2>
+            <a href="./index.html"><h2>Tech-Shop</h2>
+            </a>
         </div>
         <nav class="headicons">
             <ul class="parenticon">
@@ -31,7 +32,7 @@
                 </li>
                 <li class="icon">
                     <a href="" class="ticon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                         </svg>
                     </a>
@@ -52,10 +53,10 @@
                     </div>
                     <div class="carddetails">
                         <div class="details-fline">
-                            <p>JBL Live 660NC Wireless Over-Ear NC <br> Headphones</p>
+                            <p>JBL Live 660NC Wireless Over-Ear NC<br>Headphones</p>
                         </div>
                         <div class="card-price">
-                            <strong class="discount-price">₹9,999</strong>
+                            <strong class="discount-price">₹9,999</strong>&nbsp;&nbsp;
                             <del class="actualprice">₹14,999</del>
                         </div>
                         <div class="addbutton">
@@ -79,15 +80,15 @@
             <div class="slider">
                 <div class="card">
                     <div class="cardimg">
-                        <img src="./products/jbl660nc-1.png" width="100px" alt="">
+                        <img src="./products/boat518-1.png" width="100px" alt="">
                     </div>
                     <div class="carddetails">
                         <div class="details-fline">
-                            <p>JBL Live 660NC Wireless Over-Ear NC <br> Headphones</p>
+                            <p>boAt Rockerz 518 On Ear Wireless &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br> Headphones</p>
                         </div>
                         <div class="card-price">
-                            <strong class="discount-price">₹9,999</strong>
-                            <del class="actualprice">₹14,999</del>
+                            <strong class="discount-price">₹1,299</strong>&nbsp;&nbsp;
+                            <del class="actualprice">₹3,990</del>
                         </div>
                         <div class="addbutton">
                             <button class="qty-btn minus" class="signo" style="width: 30px;">-</button>
@@ -110,15 +111,15 @@
             <div class="slider">
                 <div class="card">
                     <div class="cardimg">
-                        <img src="./products/jbl660nc-1.png" width="100px" alt="">
+                        <img src="./products/boat131-1.png" width="100px" alt="">
                     </div>
                     <div class="carddetails">
                         <div class="details-fline">
-                            <p>JBL Live 660NC Wireless Over-Ear NC <br> Headphones</p>
+                            <p>boAt Airdopes 131 Wireless in Ear &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br> Earbuds</p>
                         </div>
                         <div class="card-price">
-                            <strong class="discount-price">₹9,999</strong>
-                            <del class="actualprice">₹14,999</del>
+                            <strong class="discount-price">₹1,099</strong>&nbsp;&nbsp;
+                            <del class="actualprice">₹2,990</del>
                         </div>
                         <div class="addbutton">
                             <button class="qty-btn minus" class="signo" style="width: 30px;">-</button>
@@ -141,15 +142,15 @@
             <div class="slider">
                 <div class="card">
                     <div class="cardimg">
-                        <img src="./products/jbl660nc-1.png" width="100px" alt="">
+                        <img src="./products/boat110-1.png" width="100px" alt="">
                     </div>
                     <div class="carddetails">
                         <div class="details-fline">
-                            <p>JBL Live 660NC Wireless Over-Ear NC <br> Headphones</p>
+                            <p>boAt Bassheads 110 In Ear Wired &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br> Earphones</p>
                         </div>
                         <div class="card-price">
-                            <strong class="discount-price">₹9,999</strong>
-                            <del class="actualprice">₹14,999</del>
+                            <strong class="discount-price">₹499</strong>&nbsp;&nbsp;
+                            <del class="actualprice">₹999</del>
                         </div>
                         <div class="addbutton">
                             <button class="qty-btn minus" class="signo" style="width: 30px;">-</button>
@@ -165,11 +166,11 @@
                     </div>
     
                 </div>
-                <!-- hr line -->
-                <hr size="1" class="h-line">
             </div>
         
         </div>
+
+        <!-- Order Summary Start -->
         <div class="ordersummary">
             <div class="summary-heading">
                 <h3>Order Summary ( 4 items )</h3>
@@ -196,6 +197,8 @@
             </div>
 
         </div>
+        <!-- Order Summary End -->
+
     </div>
     <!-- Order Section End -->
 
