--- a/product_detail.html
+++ b/product_detail.html
@@ -11,7 +11,8 @@
     <!-- header part start -->
     <header class="header">
         <div class="heading">
-            <h2>Tech-Shop</h2>
+            <a href="./index.html"><h2>Tech-Shop</h2>
+            </a>
         </div>
         <nav class="headicons">
             <ul class="parenticon">
