update in product_details styling

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="Addcartrow1">
                 <div class="addproduct">
                     <div class="prodimg">
-                        <img src="./products/jbl660nc-1.png" alt="Headphones" width="100px" height="100px"> 
+                        <a href="./product_detail.html"> <img src="./products/jbl660nc-1.png" alt="Headphones" width="100px" height="100px"> </a>                        
                     </div>
                     <div class="proddetail">
                         <div class="star">
