modify home page

--- a/login.html
+++ b/login.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sigin</title>
+    <title>Signup</title>
     <link rel="stylesheet" href="./login.css">
 </head>
-<body>
+<body>    
     
     <div class="container">
         <form class="signup-form">
+            <button type="button" class="close-btn">&times;</button> <!-- Close button -->
             <h1>Signup</h1>
-            <a>Already have an account? Login </a>
+            <a>Already have an account ? Login </a>
             <div class="inputfield"> 
             <input type="text" placeholder="Username" class="input-field">
             <input type="email" placeholder="Email" class="input-field">
@@ -26,7 +27,6 @@
                     <p class="line-text">or login with</p>
                     <div class="line"></div>
                 </div>
-                <!-- <p class="loginwith"><hr width="20%" size="1">&nbsp;&nbsp;or login with&nbsp;&nbsp; <hr width="20%" size="1"></p> -->
                 <button class="social-btn facebook">Facebook</button>
                 <button class="social-btn google">Google</button>
                 <button class="social-btn twitter">Twitter</button>
