--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Commerse Web</title>
+    <title>Tech-Shop</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -31,28 +31,49 @@
                         </svg>
                     </a>
                 </li>
-                <li class="icon">
-                    <a href="./login.html" class="ticon">
+                <li class="ticon">
+                    <a href="" class="ticon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
                         </svg>
                     </a>
+                    <div class="user" >
+                        <form >
+                            <h2>Hello!</h2><br>
+                            <p>Access account and manage orders</p><br>
+                            <a href="login.html" class="register">Login/Signup</a>
+                            <hr width="100%" size="1" style="margin-top: 20px;"><br>
+                            <h4 ><b>Please Login</b></h4><br>
+                        </form>
+                    </div>
                 </li>
             </ul>
         </nav>
     </header>
     <!-- header part End -->
+
+
     <section class="hero">
         <div class="hero-text">
             <h4>boAt Airdopes 131</h4>
             <h2>Featherweight For <br>Comfort All-Day.</h2>
-            <p class="price">₹1,099 <span>₹2,990</span></p>
+            <p>₹1,099 <span>₹2,990</span></p>
             <button class="herobutton">Shop Now</button>
         </div>
         <div class="boat-bg-img">
             <img src="./products/boat131-3.png" alt="boAt Airdopes 131" width="300px" height="300px">
-        </div>
+        </div>        
     </section>
+    <!-- Style  dot -->
+    <div class="dot">
+        <ul class="dot-menu">
+            <a href=""><li style="background-color:  #444;"></li></a>
+            <a href=""><li style="background-color: #e90c0c;"></li></a>
+            <a href=""><li style="background-color: #444;"></li></a>
+        </ul>
+    </div>
+
+
     <section class="featured-products">
         <h2>Featured Products</h2>
         <div class="products">
@@ -83,7 +104,18 @@
                 <p><b>₹899</b><span>&nbsp;&nbsp;&nbsp;<s>₹2,990</s></span></p>
             </div>         
         </div>
+        <!-- Style  dot -->
+        <div class="dot">
+            <ul class="dot-menu">
+                <a href=""><li style="background-color: #e90c0c;"></li></a>
+                <a href=""><li style="background-color: #444;"></li></a>
+                <a href=""><li style="background-color: #444;"></li></a>
+                <a href=""><li style="background-color: #444;"></li></a>                
+            </ul>
+        </div>
     </section>
+
+
     <section class="top-product">
         <h2>Top Products</h2>
         <div class="product-filters">
@@ -449,7 +481,7 @@
                     <b class="adv-txt">Express Delivery</b><br />
                     <b class="advtwo-txt">Ships in 24 Hours</b>
                 </p>
-              </div>
+            </div>
             <div class="Brand">
                 <div class="advicons">
                     <i class="fa-solid fa-shield-halved" style="font-size:30px;color:red"></i>
@@ -484,6 +516,8 @@
     </section>
     <!-- our Advantages end  -->
 
+
+    
     <!-- footer Start -->
     <footer class="footerHome">
         <div class="footer-container">
@@ -565,6 +599,7 @@
 
     </footer>
     <!-- footer End -->
+
 
 </body>
 </html>
