add media query in home page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <!-- header part End -->
 
-
+        <!-- banner image Start  --> 
     <section class="hero">
         <div class="hero-text">
             <h4>boAt Airdopes 131</h4>
@@ -64,6 +64,8 @@
             <img src="./products/boat131-3.png" alt="boAt Airdopes 131" width="300px" height="300px">
         </div>        
     </section>
+    <!-- banner image End  --> 
+
     <!-- Style  dot -->
     <div class="dot">
         <ul class="dot-menu">
