add responsive and modify

--- a/product_detail.html
+++ b/product_detail.html
@@ -44,16 +44,20 @@
     
     <!-- Product Details Start -->
     <div class="product_container">
+        <!-- left section -->
         <div class="product_angles">
         <img src="./products/jbl660nc-1.png" alt=""> <br>
         <img src="./products/jbl660nc-2.png" alt=""> <br>
         <img src="./products/jbl660nc-3.png" alt=""> <br>
         <img src="./products/jbl660nc-4.png" alt=""> <br>
         </div>
+
+        <!-- Middle section -->
         <div class="product_img">
             <img class="mainimg" src="./products/jbl660nc-1.png" alt="">
         </div>
 
+        <!-- Right section -->
         <div class="product_details">
             <h2>JBL LIVE 660NC</h2><br>
             <p style="margin-top: 10px;">Wireless Over-ear NC headphones</p><br>
@@ -81,14 +85,15 @@
             </div>
 
         </div>
-
     </div>    
     <!-- Product Details End -->
 
     <!-- Other Info Start -->
     <div class="other_info">
-        <ul style=" list-style: none; margin-top: 92px; opacity: 0.6;">
-            <li>Brand</li><br><br>
+
+        <ul style=" opacity: 0.6;" class="brand_details">
+            <a href=""></a><br><br>
+            <li style="margin-top: 40px;">Brand</li><br><br>
             <li>Model</li><br><br>
             <li>Generic Name</li><br><br>
             <li> Headphone Type</li><br><br>
@@ -97,8 +102,7 @@
         </ul>
 
         <ul class="Specifications">
-            <a href="">specifications</a><br><br>
-            <!-- <h5>specifications</h5><br><br> -->
+            <a href="" class="spec_btn">specifications</a><br><br>
             <li style="margin-top: 40px;">JBL</li><br><br>
             <li>JBL Live 660NC</li><br><br>
             <li>Headphones</li><br><br>
