modify in products detail css

--- a/product_detail.html
+++ b/product_detail.html
@@ -74,7 +74,7 @@
                     <p style="opacity: 0.6; margin-top: 10px;">(Inclusive of all taxes)</p>
                 </div>        
                 <div class="detailsec2">
-                    <button class="button-icon" style="  background-color: green; width: 120px; height: 35px; border-radius: 7px; border: none;">  <i class="fa-solid fa-check" style="color: white;"></i> &nbsp; <b style="font-size: larger;color: white;">In Stock</b></button>
+                    <button class="button-icon" style="  background-color: green; width: 120px; height: 35px; border-radius: 7px; border: none; cursor: pointer;">  <i class="fa-solid fa-check" style="color: white;"></i> &nbsp; <b style="font-size: larger;color: white;">In Stock</b></button>
                 </div>
             </div>
             <hr style="margin-top: 35px;" width="90%" size="1">
@@ -83,7 +83,9 @@
                 <a href="">No Cost EMI on Credit Card</a>
                 <a href="">Pay Later & Avail Cashback</a>
             </div>
-
+            <hr style="margin-top: 35px;" width="90%" size="1">
+            <a href=""><button class="addcartbtn">Add to cart</button></a>
+            
         </div>
     </div>    
     <!-- Product Details End -->
